# raycaster-gl

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: ShaderString.cmake
libs/glad/: glad.c  glad.h
src/: main.cpp
src/core/: mesh.cpp  mesh.hpp  pixels.cpp  pixels.hpp  plane.cpp  plane.hpp  shader.cpp  shader.hpp  window.cpp  window.h  window.hpp
src/game/: level.cpp  level.hpp  main.cpp  player.cpp  player.hpp  shared.hpp
src/shaders/: fragment.glsl  vertex.glsl
